tests/snapshot/inputs/errors/annotated_record_pattern_typecheck_fail.ncl
(
  let { x : Bool } = { x = 5 } in
  x
) : _